<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    tools:context=".BackupAndRestoreDummyActivityForUITest">

    <TextView
        android:id="@+id/current_account_details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_account_details_label"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/backup_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_status"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/current_account_details_label"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/backup_status_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="No"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/backup_status_label"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/public_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/public_address_label"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/backup_status_value"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/public_address_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/public_address_label"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/create_new_account"
        style="@style/BackupAndRestoreButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/public_address_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/backup_current_account"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/create_new_account"/>

    <Button
        android:id="@+id/backup_current_account"
        style="@style/BackupAndRestoreButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/create_new_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/restore_account"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/backup_current_account"/>

    <Button
        android:id="@+id/restore_account"
        style="@style/BackupAndRestoreButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/backup_current_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/restore_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>
